[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.9.4"
thiserror = "1.0"
borsh = "0.9.1" 
spl-token = { version="=3.2.0", features = [ "no-entrypoint" ] }

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "=1.9.4"
solana-validator = "=1.9.4"
solana-logger = "=1.9.4"

[lib]
crate-type = ["cdylib", "lib"]
